--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,6 @@
         <title>Quick Blog</title>
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root" class="container"></div>
     </body>
 </html>
